Imporve backward compatibility